Add probability class of 10/04/2024

--- a/S2_P2_PROB.tex
+++ b/S2_P2_PROB.tex
@@ -8,6 +8,13 @@
 \setlength{\headheight}{15pt} % ??? we do what fancyhdr tells us to do
 
 \newcommand{\cov}{{\operatorfont Cov}}
+% Distributions
+\newcommand{\Normal}{{\operatorfont Normal}}
+\newcommand{\GammaD}{{\operatorfont Gamma}}
+\newcommand{\Poisson}{{\operatorfont Poisson}}
+\newcommand{\Exponential}{{\operatorfont Exponential}}
+\newcommand{\BivariateNormal}{{\operatorfont BivariateNormal}}
+
 
 \begin{document}
 
@@ -468,7 +475,7 @@ The exponential distribution is related to some discrete distributions:
 
           \begin{proof}
               We can prove this by considering $X$ the time of the next arrival and $N_t$ the number of arrivals in an interval of length $t$.
-              Then $X \sim {\operatorfont Exponential}(\lambda)$ and $N_t \sim {\operatorfont Poisson}(t \lambda)$.
+              Then $X \sim \Exponential(\lambda)$ and $N_t \sim \Poisson(t \lambda)$.
               Moreover, $P(X > t) = P(N_t = 0)$, that is, the probability of the next visit being after $t$ is the same as the probability of having no visits in the interval $t$.
               Then $P(X > t) = e^{-\lambda t}$.
           \end{proof}
@@ -477,15 +484,16 @@ The exponential distribution is related to some discrete distributions:
 \begin{example}
     We have a rate of 20 people per hour.
 
-    Let $N_t$ be the number of people entering in a certain time interval $t$, then $N_t \sim {\operatorfont Poisson}(t \lambda)$.
+    Let $N_t$ be the number of people entering in a certain time interval $t$, then $N_t \sim \Poisson(t \lambda)$.
     We want to find the probability that the time between two arrivals is less than 3 minutes.
 
-    Note that $N_{60} \sim {\operatorfont Poisson}(20)$, that is, $\lambda = \frac{1}{3}$.
+    Note that $N_{60} \sim \Poisson(20)$, that is, $\lambda = \frac{1}{3}$.
 
-    Then the time between two arrivals $X \sim {\operatorfont Exponential}\left(\frac{1}{3}\right)$, and $P(X < 3) = 1 - e^{-\lambda \cdot 3} = 1 - e^{-1}$.
+    Then the time between two arrivals $X \sim \Exponential\left(\frac{1}{3}\right)$, and $P(X < 3) = 1 - e^{-\lambda \cdot 3} = 1 - e^{-1}$.
 \end{example}
 
 \subsection{Normal or Gaussian distribution}
+\label{sec:normal_distribution}
 
 We have two parameters $\mu \in \R$ and $\sigma > 0$.
 
@@ -523,14 +531,14 @@ We have two parameters $\mu \in \R$ and $\sigma > 0$.
           \end{align}
 \end{itemize}
 
-\subsubsection{Proprieties of the normal distribution}
+\subsubsection{properties of the normal distribution}
 
 % Class of 27/03/2024
 
 \begin{theorem}[transformation of normal random variables]
-    Let $X \sim {\operatorfont Normal}(\mu, \sigma^2)$, $a, b \in \R$ with $a \neq 0$, then
+    Let $X \sim \Normal(\mu, \sigma^2)$, $a, b \in \R$ with $a \neq 0$, then
     \begin{equation}
-        Y = aX + b \sim {\operatorfont Normal}(a\mu + b, a^2 \sigma^2)
+        Y = aX + b \sim \Normal(a\mu + b, a^2 \sigma^2)
     \end{equation}
 \end{theorem}
 
@@ -548,11 +556,11 @@ We have two parameters $\mu \in \R$ and $\sigma > 0$.
 \end{proof}
 
 \begin{definition}[standard normal distribution]
-    The \emph{standard normal distribution} is a normal distribution with parameters $\mu = 0$ and $\sigma = 1$. It is denoted as $Z \sim {\operatorfont Normal}(0, 1)$.
+    The \emph{standard normal distribution} is a normal distribution with parameters $\mu = 0$ and $\sigma = 1$. It is denoted as $Z \sim \Normal(0, 1)$.
 \end{definition}
 
 \begin{lemma}
-    For any $X \sim {\operatorfont Normal}(\mu, \sigma^2)$, then $Z = \frac{X - \mu}{\sigma} \sim {\operatorfont Normal}(0, 1)$.
+    For any $X \sim \Normal(\mu, \sigma^2)$, then $Z = \frac{X - \mu}{\sigma} \sim \Normal(0, 1)$.
 \end{lemma}
 
 \begin{proof}
@@ -569,7 +577,7 @@ We have two parameters $\mu \in \R$ and $\sigma > 0$.
 \end{remark}
 
 \begin{example}
-    Let $X \sim {\operatorfont Normal}(167, \sigma = 3)$, we want to find $P(X > 170)$.
+    Let $X \sim \Normal(167, \sigma = 3)$, we want to find $P(X > 170)$.
 
     \begin{equation}
         P(X>170) = P(\frac{X - 167}{3} > \frac{170 - 167}{3}) = P(Z > 1) = 1 - P(Z \leq 1)
@@ -610,10 +618,10 @@ The gamma distribution has two parameters, $k, \lambda \in \R$, with $k > 0$ and
           \end{equation}
 \end{itemize}
 
-\subsubsection{Proprieties of the gamma distribution}
+\subsubsection{properties of the gamma distribution}
 
 \begin{theorem}
-    Let $X \sim {\operatorfont Gamma}(k, \lambda)$, then $Y = \lambda X \sim {\operatorfont Gamma}(k, 1)$.
+    Let $X \sim \GammaD(k, \lambda)$, then $Y = \lambda X \sim \GammaD(k, 1)$.
 \end{theorem}
 
 \begin{proof}
@@ -629,18 +637,18 @@ The gamma distribution has two parameters, $k, \lambda \in \R$, with $k > 0$ and
 \end{proof}
 
 \begin{theorem}
-    Let $X \indep Y$ with $X \sim {\operatorfont Gamma}(k_X, \lambda)$ and $Y \sim {\operatorfont Gamma}(k_Y, \lambda)$, then $X + Y \sim {\operatorfont Gamma}(k_X + k_Y, \lambda)$.
+    Let $X \indep Y$ with $X \sim \GammaD(k_X, \lambda)$ and $Y \sim \GammaD(k_Y, \lambda)$, then $X + Y \sim \GammaD(k_X + k_Y, \lambda)$.
 \end{theorem}
 
 \begin{example}
     We have 20 customers per hour, we want to find the waiting time in minutes for the third customer.
 
-    Let $N_{60} \sim {\operatorfont Poisson(60\lambda)}$ be the number of customers in an hour, then $\lambda = \frac{1}{3}$.
-    We have that $X \sim {\operatorfont Gamma}(3, \lambda)$, and the $E(x) = \frac{3}{\lambda} = 9$ minutes.
+    Let $N_{60} \sim \Poisson(60\lambda)$ be the number of customers in an hour, then $\lambda = \frac{1}{3}$.
+    We have that $X \sim \GammaD(3, \lambda)$, and the $E(x) = \frac{3}{\lambda} = 9$ minutes.
 \end{example}
 
 \begin{theorem}
-    Let $Z \sim {\operatorfont Normal}(0, 1)$, then $Z^2 \sim {\operatorfont Gamma}\left(\frac{1}{2}, \frac{1}{2}\right)$.
+    Let $Z \sim \Normal(0, 1)$, then $Z^2 \sim \GammaD\left(\frac{1}{2}, \frac{1}{2}\right)$.
 \end{theorem}
 
 \begin{proof}
@@ -664,7 +672,7 @@ The gamma distribution has two parameters, $k, \lambda \in \R$, with $k > 0$ and
 \end{proof}
 
 \begin{lemma}
-    Let $Z_1, \ldots, Z_n \indep {\operatorfont Normal}(0, 1)$, then $Z_1^2 + \ldots + Z_n^2 \sim {\operatorfont Gamma}\left(\frac{n}{2}, \frac{1}{2}\right)$.
+    Let $Z_1, \ldots, Z_n \indep \Normal(0, 1)$, then $Z_1^2 + \ldots + Z_n^2 \sim \GammaD\left(\frac{n}{2}, \frac{1}{2}\right)$.
 \end{lemma}
 
 \subsection{Cauchy distribution}
@@ -770,7 +778,7 @@ Moreover, if the joint pdf is continuous at $(x, y)$, we have
     \end{align}
 \end{definition}
 
-\subsection{Expectation of functions od random vectors}
+\subsection{Expectation of functions of random vectors}
 
 We give the following theorems without proof.
 On the book you can find the proof for \autoref{thm:joint:linearity_expectation}
@@ -839,6 +847,8 @@ It can be proven that $X \indep Y$ iff the joint pdf can be written as
 \end{proof}
 
 \begin{theorem}[transformation of independent variables]
+    \label{thm:joint:transformation_independent}
+
     Let $X, Y$ be random variables such that $X \indep Y$.
     For any measurable $g: \R \to R$ and $h: \R \to R$, $g(X) \indep h(Y)$.
 \end{theorem}
@@ -879,5 +889,100 @@ It can be proven that $X \indep Y$ iff the joint pdf can be written as
 \end{definition}
 
 % TODO: there's stuff missing here
+
+\begin{proposition}[properties of covariance]
+    \label{prop:joint:properties_covariance}
+
+    The properties of covariance are the same as in the discrete case, therefore we will not prove them.
+
+    \begin{enumerate}
+        \item $\cov(X, Y) = E(XY) - E(X)E(Y)$
+        \item $\cov(X,Y) = \cov(Y,X)$
+        \item $\cov(aX + bY, Z) = a \cov(X, Z) + b \cov(Y, Z)$
+    \end{enumerate}
+\end{proposition}
+
+\begin{proposition}
+    We can prove using Cauchy-Schwartz inequality that
+    \begin{equation}
+        -1 < \rho(X, Y) < 1
+    \end{equation}
+\end{proposition}
+
+% Class of 10/04/2024
+
+\begin{proposition}[covariance of independent variables]
+    Let $X \indep Y$. Then $X - \mu_x \indep Y -\mu_Y$ because of \autoref{thm:joint:transformation_independent}.
+    We can apply \autoref{prop:joint:properties_covariance} to get
+    \begin{align}
+        \cov(X, Y) & = E((X - \mu_X)(Y - \mu_Y))    \\
+                   & = E(X - \mu_X) E(Y - \mu_Y)    \\
+                   & = (E(X) - \mu_X)(E(Y) - \mu_Y) \\
+                   & = 0
+    \end{align}
+\end{proposition}
+
+\begin{remark}
+    While $\cov(X, Y) = 0 \impliedby X \indep Y$, the converse implication is not true.
+    We can use $f(x, y) = I_{(0,1)}(x) I_{(1-x, x-1)}(y)$ as a counterexample.
+\end{remark}
+
+\subsection{Bivariate normal distribution}
+
+This distribution takes 5 parameters: $\mu_X, \mu_Y, \sigma_X, \sigma_Y, \rho$.
+
+The PDF is
+\begin{equation}
+    f_{X,Y}(x,y) = \frac{1}{2 \pi \sigma_X \sigma_Y \sqrt{1- \rho^2}} e^{-\frac{1}{2(1-\rho^2)} \left[ \left( \frac{x - \mu_X}{\sigma_X} \right)^2 -2 \rho \left( \frac{x-\mu_X}{\sigma_X} \right) \left( \frac{y-\mu_Y}{\sigma_Y} \right) + \left(\frac{y-\mu_Y}{\sigma_Y}\right)^2 \right]}
+\end{equation}
+
+The level sets of this function are ellipses and in particular, if $\rho = 0$ we get circles.
+
+We can simplify the pdf by completing the square at the exponent with $\rho ^2 \left(\frac{y - \mu_Y}{\sigma_Y}\right)^2$. We get
+\begin{align}
+    f_{X,Y}(x,y) & = \frac{1}{2 \pi \sigma_X \sigma_Y \sqrt{1- \rho^2}} e^{-\frac{1}{2(1-\rho^2)} \left[ \left( \frac{x - \mu_X}{\sigma_X} - \rho \frac{y-\mu_Y}{\sigma_Y} \right)^2 + (1 - \rho^2) \left(\frac{y-\mu_Y}{\sigma_Y}\right)^2 \right]} \\
+                 & = \frac{1}{\sqrt{2 \pi} \sigma_X \sqrt{1- \rho^2}} e^{-\frac{1}{2(1-\rho^2)} \left( \frac{x - \mu_X}{\sigma_X} - \rho \frac{y-\mu_Y}{\sigma_Y} \right)^2} \cdot
+    \frac{1}{\sqrt{2 \pi} \sigma_Y} e^{-\frac{1}{2\cancel{(1-\rho^2)}} \cancel{(1 - \rho^2)} \left(\frac{y-\mu_Y}{\sigma_Y}\right)^2}
+\end{align}
+which is very similar to the gaussian distribution (\autoref{sec:normal_distribution}).
+In fact, with some algebra we can show that the marginal distributions are indeed normal distributions:
+\begin{align}
+    X & \sim \Normal(\mu_X, \sigma_X^2) \\
+    Y & \sim \Normal(\mu_Y, \sigma_Y^2)
+\end{align}
+
+Moreover, we can also show that $\rho$ is indeed the correlation coefficient:
+\begin{align}
+    \rho(X, Y) & = \frac{\cov(X, Y)}{\sigma_X \sigma_Y}                                                                                                                                                                                                                                                                                             \\
+               & = \frac{E((X - \mu_X)(Y-\mu_Y))}{\sigma_X \sigma_Y}                                                                                                                                                                                                                                                                                \\
+               & = E\left(\frac{(X - \mu_X)}{\sigma_X}\frac{(Y-\mu_Y)}{\sigma_Y}\right)                                                                                                                                                                                                                                                             \\
+               & = \iint \frac{x - \mu_X}{\sigma_X} \frac{y - \mu_Y}{\sigma_Y} \frac{1}{\sqrt{2 \pi} \sigma_X \sqrt{1- \rho^2}} e^{-\frac{1}{2(1-\rho^2)} \left( \frac{x - \mu_X}{\sigma_X} - \rho \frac{y-\mu_Y}{\sigma_Y} \right)^2} \cdot \frac{1}{\sqrt{2 \pi} \sigma_Y} e^{-\frac{1}{2} \left(\frac{y-\mu_Y}{\sigma_Y}\right)^2} \dd{x} \dd{y} \\
+               & = \iint z w\frac{1}{\sqrt{2 \pi} \sigma_X \sqrt{1- \rho^2}} e^{-\frac{1}{2(1-\rho^2)} \left( z - \rho w \right)^2} \cdot \frac{1}{\sqrt{2 \pi} \sigma_Y} e^{-\frac{1}{2} w^2} \dd{z} \dd{w}                                                                                                                                        \\
+               & = \int w \frac{1}{\sqrt{2 \pi}}e^{-\frac{1}{2} w^2} \underbrace{\left[ \int z \frac{1}{\sqrt{2 \pi} \sigma_X \sqrt{1- \rho^2}} e^{-\frac{1}{2(1-\rho^2)} \left( z - \rho w \right)^2} \dd{z} \right]}_{\rho w} \dd{w} \label{eq:bivariate:1}                                                                                       \\
+               & = \int \rho w^2 \frac{1}{\sqrt{2 \pi}}e^{-\frac{1}{2} w^2} \dd{w}                                                                                                                                                                                                                                                                  \\
+               & = \rho \cdot 1 = \rho \label{eq:bivariate:2}
+\end{align}
+where in \autoref{eq:bivariate:1} we used some sorcery I didn't get
+% TODO: !!!
+and in \autoref{eq:bivariate:2} we used the fact that if we let $W \sim \Normal(0,1)$ then the integral represents $\rho \cdot E(W^2) = V(W) + (E(W))^2 = 1 \cdot \rho$.
+
+Moreover, if $(X, Y) \sim \BivariateNormal$ then $X \indep Y \iff \rho = 0$ (note that this is an if and only if, not only an imply).
+
+Furthermore, while $(X, Y) \sim \BivariateNormal \implies X \sim \Normal, Y \sim \Normal$ the converse is not generally true.
+
+\subsection{Conditioning}
+
+\begin{definition}[conditional probability]
+    We define the conditional pdf as
+    \begin{equation}
+        f_{Y | X}(y | x) = \frac{f_{X, Y}(x, y)}{f_X(x)} \label{eq:joint:conditioning}
+    \end{equation}
+\end{definition}
+
+This is similar to the definition in the discrete case, but now we need to pass to the limit:
+\begin{equation}
+    f_{Y|X}(y|x) = \lim_{\substack{\Delta x \to 0 \\ \Delta y \to 0}} \frac{P\left(y \leq Y \leq y + \Delta y \big| x \leq X \leq x + \Delta x\right)}{\Delta y}
+\end{equation}
+this can be proven by substituting the definition of $f_{X, Y}(x,y)$ and $f_X(x)$ in \autoref{eq:joint:conditioning}.
 
 \end{document}
