[skip ci] Add todos

--- a/S2_P2_PHY1.tex
+++ b/S2_P2_PHY1.tex
@@ -694,4 +694,15 @@ This law says that if we put a body in a fluid the force exerted by the fluid up
     \vec F = \sum_{\text{surface}} \dd{\vec F}(\vec r) = pgV \hat k
 \end{equation}
 
+% TODO: Class of 12/04/24
+TODO
+\begin{itemize}
+    \item
+          Proof of Archimedes theorem using the divergence theorem,
+    \item
+          proof of divergence theorem in the case of a cube,
+    \item
+          as homework prove Bernoulli theorem.
+\end{itemize}
+
 \end{document}
